--- a/styles.css
+++ b/styles.css
@@ -28,7 +28,6 @@ body{
 }
 
 .info{
-
     margin-top: 10px;
     background-image: url(/assets/iconInfo.png);
     height: 30px;
@@ -76,6 +75,7 @@ body{
     margin-left: 50px;
     background-color: white;
 }
+
 .statusIcon{
     border-radius: 50%;
     width: 30px;
@@ -84,25 +84,13 @@ body{
     margin-top: 2px;
     background-color: #1eee53;
 }
-.status{
-    padding-top: 1px;
-    padding-bottom: 1px;
-    display: flex;
-    justify-content: center;
-    border-radius: 10px;
-    margin-left: 25px;
-    margin-right: 25px;
-    background-color: white;
-}
 
-.timer{
-    padding-top: 2px;
-    padding-bottom: 2px;
+.status{
     display: flex;
     justify-content: center;
     border-radius: 10px;
-    margin-left: 75px;
-    margin-right: 75px;
+    margin-left: 35px;
+    margin-right: 35px;
     background-color: white;
 }
 
@@ -244,13 +232,34 @@ body{
     width: 330px;
 }
 
-
-
-:root{
-    font-family: 'Inter', sans-serif;
+.containerTimer{
+    padding: 0px;
+    margin: 0px;
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    height:50px;
 }
-
-
+#timer1, #timer2, #timer3, #timer4{
+    display: block;
+    font-size: 20px;
+    font-weight: bold;
+    border-radius: 10px;
+    width: 60px;
+    height: 45px;
+    border-style: none;
+    background-color: white;
+}
+#Countdown_sm1, #Countdown_sm2, #Countdown_sm3, #Countdown_sm4{
+    margin-right: 4px;
+    border-radius: 10px;
+    padding-left: 5px;
+    padding-right: 5px;
+    padding-top: 5px;
+    padding-bottom: 5px;
+    background-color: white;
+    text-align: center;
+}
 
 
 
